[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "resonet"
version = "1.0.0"
dependencies = [
    "h5py",
    "numpy",
    "torch",
    "torchvision",
    "torchmetrics",
    "Pyro4",
    "fabio",
    "dxtbx",
    "joblib",
    "tqdm",
    "segmentation-models-pytorch"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["resonet*"]

[project.scripts]
resonet-simulate = "resonet.sims.runme:main"
resonet-viewsims = "resonet.scripts.view_sims:main"
resonet-simulate-joblib = "resonet.sims.runme_joblib:main"
resonet-train = "resonet.net:main"
resonet-plotloss = "resonet.scripts.plot_train:main"
resonet-showmaster = "resonet.scripts.show_master:main"
resonet-mergefiles = "resonet.scripts.merge_h5s:main"
resonet-compress = "resonet.scripts.compress:main"
resonet-decompress = "resonet.scripts.decompress:main"
resonet-imgeater = "resonet.scripts.image_eater:main"
resonet-imgfeeder = "resonet.scripts.image_feeder:main"
resonet-mfx = "resonet.scripts.mfx:main"
resonet-getsimdata = "resonet.scripts.get_simdata:main"
resonet-getSparsifyModels = "resonet.sparsify.download_model:main"
